--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Christopher Pitts: Web Development Portfolio</title>
+
+<link href="styles/styles.css" rel="stylesheet" type="text/css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Christopher Pitts</h1>
+<h2>Web Development Portfolio</h2>
+<hr>
+<div class="bold">Project.</div>
+<div class="projectListing">
+	<div>Game Sorter</div>
+    <div>Take an comma delimited list and guides user throguh sorting list by personal preference.</div>
+</div>
 </body>
 </html>
