--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <hr>
 <div class="bold">Project.</div>
 <div class="projectListing">
-	<div>Game Sorter</div>
+	<div><a href="game-sorter.html">Game Sorter</a></div>
     <div>Take an comma delimited list and guides user throguh sorting list by personal preference.</div>
 </div>
 </body>
