Change from comma to line delimited.

--- a/game-sorter.html
+++ b/game-sorter.html
@@ -13,9 +13,9 @@
 	<div id="header">Game Sorter 5000</div>
     
 	<div id="listInput">
-    	<div class="sectionHeader">Enter your game list (seperate by comma)</div>
+    	<div class="sectionHeader">Enter your game list (one game per line)</div>
         <textarea id="gameList" name="gameList"></textarea><br />
-        <input type="button" value="Start Sorting" onclick="startSorting()">
+        <input type="button" value="Start Sorting" id="startButton">
 	</div>
 	<div id="listSorting" style="display:none;">
         <div class="sectionHeader">What Would You Rather Play?</div>
