revise character sheet

--- a/character-sheet.html
+++ b/character-sheet.html
@@ -6,7 +6,7 @@
 
 
 
-<link href="style/characterStyle.css" rel="stylesheet" type="text/css">
+<link href="styles/characterStyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
