--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 <link href="styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-N97XVT"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N97XVT');</script>
+<!-- End Google Tag Manager -->
+
+
 <h1>Christopher Pitts</h1>
 <h2>Web Development Portfolio</h2>
 <hr>
