Started adding careers basics

--- a/character-sheet.html
+++ b/character-sheet.html
@@ -35,8 +35,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <option value="raceWookie">Wookie</option>
             </select>
         </div>
-        <div id="characterCareer"></div>
-        <div id="characterTree"></div>
+        <div id="characterCareer">
+			<select>
+                <option value="careerBounty">Bounty Hunter</option>
+                <option value="careerColonist">Colonist</option>
+                <option value="careerExplorer">Explorer</option>
+                <option value="careerHired">Hired Gun</option>
+                <option value="careerSmuggler">Smuggler</option>
+                <option value="careerTechnician">Technician</option>
+            </select>
+        </div>
+        <div id="characterSpecialty"></div>
     </div>
     
     <div id="characterAttribute">
