Beginning styling of index page

--- a/index.html
+++ b/index.html
@@ -16,14 +16,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-N97XVT');</script>
 <!-- End Google Tag Manager -->
 
-
-<h1>Christopher Pitts</h1>
-<h2>Web Development Portfolio</h2>
-<hr>
-<div class="bold">Project.</div>
+<header>
+	<div>Christopher Pitts</div>
+</header>
+<main>
+<div class="bold">Programming Projects.</div>
 <div class="projectListing">
-	<div><a href="game-sorter.html">Game Sorter</a></div>
-    <div>Take an comma delimited list and guides user throguh sorting list by personal preference.</div>
+	<div class="projectTitle"><a href="game-sorter.html">Game Sorter</a></div>
+    <div class="projectDesc">
+    	<div>Game Sorter</div>
+        <div>HTML, CSS, Javascript</div>
+        <div>This program was designed to take the input of a list of the users favorite games. The user is then directed through a series of 1 v 1 comparisons in order to rank the games by preference.</div>
+        <div>&bull; User inputs a list of favorite games<br/>
+        	&bull; Program randomizes input list then places first item into new list<br />
+            &bull; Next item in original list is compared to midpoint of final list, constricting final location of compared item<br />
+            &bull; Item is compare to midpoint of new list segment<br />
+            &bull; Process is repeated until item has only 1 possible location<br />
+            &bull; Overall process is repeated for entire list<br />
+            &bull; Results are displayed in numbered list
+        </div>
+    </div>
 </div>
+</main>
 </body>
 </html>
