Testing DNS settings

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <main>
 <div class="bold">Programming Projects.</div>
 <div class="projectListing">
-	<div class="projectTitle"><a href="game-sorter.html">Game Sorter</a></div>
+	<div class="projectTitle"><a href="game-sorter.html">Game Sorter v1</a></div>
     <div class="projectDesc">
     	<div>Game Sorter</div>
         <div>HTML, CSS, Javascript</div>
