Fixed image source bug

--- a/genesys/index.html
+++ b/genesys/index.html
@@ -35,7 +35,7 @@
         <div class="button" onclick="roll_dice()">Roll Dice</div>
       </div>
       <div class="options">
-        <div class="button" onclick="change_style('genesys')">Genesys</div>
+        <div class="button" onclick="change_style('gen')">Genesys</div>
         <div class="button" onclick="change_style('star_wars')">Star Wars</div>
       </div>
 
