Clean Up Images Bug. For realz

--- a/genesys/index.html
+++ b/genesys/index.html
@@ -13,29 +13,29 @@
       </div>
       <div id="staging" class="dice_base">
         <div onclick="add_dice('boost')">
-          <img src="images/genesys/dice_boost_01.png">
+          <img src="images/default/dice_boost_01.png">
         </div>
         <div onclick="add_dice('ability')">
-          <img src="images/genesys/dice_ability_01.png">
+          <img src="images/default/dice_ability_01.png">
         </div>
         <div onclick="add_dice('proficiency')">
-          <img src="images/genesys/dice_proficiency_01.png">
+          <img src="images/default/dice_proficiency_01.png">
         </div>
         <div onclick="add_dice('setback')">
-          <img src="images/genesys/dice_setback_01.png">
+          <img src="images/default/dice_setback_01.png">
         </div>
         <div onclick="add_dice('difficulty')">
-          <img src="images/genesys/dice_difficulty_01.png">
+          <img src="images/default/dice_difficulty_01.png">
         </div>
         <div onclick="add_dice('challenge')">
-          <img src="images/genesys/dice_challenge_01.png">
+          <img src="images/default/dice_challenge_01.png">
         </div>
       </div>
       <div class="controls">
         <div class="button" onclick="roll_dice()">Roll Dice</div>
       </div>
       <div class="options">
-        <div class="button" onclick="change_style('gen')">Genesys</div>
+        <div class="button" onclick="change_style('default')">Genesys</div>
         <div class="button" onclick="change_style('star_wars')">Star Wars</div>
       </div>
 
