Fix portfolio typo
Fix development.jpg typo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- About Section -->
         <div class="row" id="about">
             <div class="column image">
-                <img src="images/development.jpg" alt="Laptop">
+                <img src="images/Development.jpg" alt="Laptop">
             </div>
             <div class="column">
                 <h2>About</h2>
