--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        
-        
+
+
     </head>
 
     <body>
@@ -41,7 +41,7 @@
             </div>
             <div class="mySlides fader">
                 <img src="images/slide2.png" style="width: 100%;">
-                <div class="text">Knowledgeable in Python and Data Analysis</div>
+                <div class="text">Knowledgeable in Python, Django and Data Analysis</div>
             </div>
             <div class="mySlides fader">
                 <img src="images/slide3.jpg" style="width: 100%;">
@@ -67,8 +67,8 @@
             <div class="column">
                 <h2>About</h2>
                 <p><ul>
-                    <li><strong>E-Commerce Platforms:</strong> Magento and Miva Merchant
-Environment/Languages: MySQL, Javascript, PHP, CSS3 and HTML5</li>
+                    <li><strong>E-Commerce Platforms:</strong> Magento and Miva Merchant</li>
+                      <li><strong>Environment/Languages:</strong> Python, Django, MySQL, Javascript, PHP, CSS3 and HTML5</li>
                     <li><strong>Technologies:</strong> GitHub and FileZilla</li>
                     <li><strong>Design Software:</strong> Adobe Photoshop, Adobe Illustrator, Dreamweaver and Adobe InDesign</li>
                     <li><strong>Social Media:</strong> Facebook, Twitter and Google+</li>
