--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="main_text">
             <h1>Christopher Pitts' Portfolio</h1>
-            With a background in geaphic design, e-commerce management and web developement, I offer a wide range of skills that will be a benefit to your team.
+            With a background in graphic design, e-commerce management and web developement, I offer a wide range of skills that will be a benefit to your team.
         </div>
 
         <!-- SLIDESHOW -->
@@ -68,7 +68,7 @@
                 <h2>About</h2>
                 <p><ul>
                     <li><strong>E-Commerce Platforms:</strong> Magento and Miva Merchant</li>
-                      <li><strong>Environment/Languages:</strong> Python, Django, MySQL, Javascript, PHP, CSS3 and HTML5</li>
+                      <li><strong>Environment/Languages:</strong> Python, Django, C#, .Net Framework, MySQL, Javascript,, jQuery, Knockout.JS, PHP, CSS3 and HTML5</li>
                     <li><strong>Technologies:</strong> GitHub and FileZilla</li>
                     <li><strong>Design Software:</strong> Adobe Photoshop, Adobe Illustrator, Dreamweaver and Adobe InDesign</li>
                     <li><strong>Social Media:</strong> Facebook, Twitter and Google+</li>
