Initial commit new design

--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
                   <div class="bold">Python | Django</div>
                 </div>
                 <div class="card-body">
-                  This application allows a user to track their collection of board games. Users can enter data manually as well add games from a list of the hottest games from BoardGameGeek.com. This feature uses BoardGameGeek's API which returns an XML file which is then parsed and added to the database. There is also a news page that uses BeautifulSoup to scrape and parse the newest articles from DiceTowerNews.com.
+                  <div>This application allows a user to track their collection of board games. Users can enter data manually as well add games from a list of the hottest games from BoardGameGeek.com. This feature uses BoardGameGeek's API which returns an XML file which is then parsed and added to the database. There is also a news page that uses BeautifulSoup to scrape and parse the newest articles from DiceTowerNews.com.</div><br />
+                  <a href="https://github.com/cphpitts/boardgame_collection" target="_blank">
+                    <div class="badge badge-primary py-3 px-2 mt-2">View on GitHub</div>
+                  </a><br />
                 </div>
               </div>
             </div>
@@ -108,7 +111,10 @@
                   <div class="bold">C# | .Net Framework</div>
                 </div>
                 <div class="card-body">
-                  I contributed to an ongoing project to develop a new website for a small theatre in Portland, OR. My tasks including developing new features in the messages system such as a deleted messages tab and a search function, as well as modify how images are saved and displayed. I was also able to track and fix bugs in the system that dealt with managing information in the database.
+                  <div>I contributed to an ongoing project to develop a new website for a small theatre in Portland, OR. My tasks including developing new features in the messages system such as a deleted messages tab and a search function, as well as modify how images are saved and displayed. I was also able to track and fix bugs in the system that dealt with managing information in the database.</div><br />
+                  <a href="https://github.com/cphpitts/theatreWebsite" target="_blank">
+                    <div class="badge badge-primary py-3 px-2 mt-2">View on GitHub</div>
+                  </a><br />
                 </div>
               </div>
             </div>
@@ -121,7 +127,10 @@
                   <div class="bold">Javascript | Knockout.JS</div>
                 </div>
                 <div class="card-body">
-                  This application is a concept for a character sheet for use with a tabletop roleplaying game. It uses Knockout.js to store and modify data related to character attributes.
+                  <div>This application is a concept for a character sheet for use with a tabletop roleplaying game. It uses Knockout.js to store and modify data related to character attributes.</div><br />
+                  <a href="https://github.com/cphpitts/characterSheet_KO" target="_blank">
+                    <div class="badge badge-primary py-3 px-2 mt-2">View on GitHub</div>
+                  </a><br />
                 </div>
               </div>
             </div>
@@ -132,7 +141,10 @@
                   <div class="bold">Javascript | Node.js | Socket.io</div>
                 </div>
                 <div class="card-body">
-                  This application is a virtual tabletop designed to be used by a roleplaying group to track die rolls and combat encounters. It uses node.js as a server system and socket.io to allow all browsers to keep all information refreshed in realtime.
+                  <div>This application is a virtual tabletop designed to be used by a roleplaying group to track die rolls and combat encounters. It uses node.js as a server system and socket.io to allow all browsers to keep all information refreshed in realtime.</div><br />
+                  <a href="https://github.com/cphpitts/genesys_vtt" target="_blank">
+                    <div class="badge badge-primary py-3 px-2 mt-2">View on GitHub</div>
+                  </a><br />
                 </div>
               </div>
             </div>
